# Muks

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  package-lock.json  package.json  tauri.conf.json
capabilities/: default.json
config/: v1.toml
docs/: UI_KNOWLEDGE_BASE.md  V1_EXECUTION_PLAN.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.svelte  main.js
frontend/src/components/: CommandPalette.svelte  StartMenu.svelte  Taskbar.svelte
frontend/src/styles/seelen/: index.scss
src/: config.rs  lib.rs  main.rs  system.rs
src/ai/: mod.rs
src/biomes/: mod.rs
src/core/: mod.rs
src/platform/: mod.rs
src/rendering/: mod.rs
src/runtime/: app_index.rs  mod.rs  rules.rs  windows_os.rs
src/shell/: mod.rs
