[package]
name = "vortex-shell"
version = "0.1.0"
edition = "2021"
authors = ["VORTEX Team"]
description = "A living, intelligent desktop shell for Windows"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[lib]
name = "vortex_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "vortex-shell"
path = "src/main.rs"

[dependencies]
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "2.0"
ctrlc = "3.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tauri = { version = "2", features = [] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
