[package]
name = "vortex-shell"
version = "0.1.0"
edition = "2021"
authors = ["VORTEX Team"]
description = "A living, intelligent desktop shell for Windows"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[lib]
name = "vortex_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "vortex-shell"
path = "src/main.rs"

[dependencies]
# Core
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "2.0"
ctrlc = "3.2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
walkdir = "2.5"

# Tauri v2
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
tauri-plugin-log = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"

# Async
tokio = { version = "1", features = ["full"] }

# Utils
parking_lot = "0.12"
once_cell = "1"
uuid = { version = "1", features = ["v4"] }

# Windows APIs
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Power",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_Threading",
] }
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_UI_Shell",
    "Win32_System_Com",
] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
